# dagster-litellm-demo

./: .env.example  .gitignore  DATA_GENERATION.md  QUICKSTART.md  README.md  __init__.py  dg.toml  generate_sample_data.py  pyproject.toml  start.sh
defs/: __init__.py  definitions.py  definitions_production_example.txt
defs/assets/: checks.py  enhanced_examples.py  partitioned_triage.py  tickets.py  triage.py
defs/resources/: __init__.py
defs/resources/litellm/: __init__.py  litellm_client.py  litellm_resource.py
defs/schemas/: __init__.py  models.py
sample_data/: tickets_large.json  tickets_small.json
